vpn/baseInfrastructure/network.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create Entire VPN Network

Parameters:
  VPNVpcCidr:
    Type: String

  VPNUntrustSubnetCidr:
    Type: String

  VPNTrustSubnetCidr:
    Type: String

  VPNPrivateSubnetACidr:
    Type: String

  VPNPrivateSubnetCCidr:
    Type: String

  VPNPrivateSubnetDCidr:
    Type: String

  VPNPublicSubnetACidr:
    Type: String

  VPNPublicSubnetCCidr:
    Type: String

  VPNPublicSubnetDCidr:
    Type: String

  VPNEndpointSubnetACidr:
    Type: String

  VPNEndpointSubnetCCidr:
    Type: String

  VPNEndpointSubnetDCidr:
    Type: String

  VPNNTPServerIp:
    Type: String

  VPNDomainName:
    Type: String

  VPNDNSPrimary:
    Type: String

  VPNDNSSecondary:
    Type: String
  
  VPNTagKey:
    Type: String

  VPNTagValue:
    Type: String

Resources:
  # VPC
  VPNVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPNVpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-VPC-01
 
  # Internet Gateway
  VPNInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-IGW-01

  VPNInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref VPNInternetGateway
      VpcId: !Ref VPNVpc

  # DHCP Option set
  VPNDHCPOptionSet:
    Type: AWS::EC2::DHCPOptions
    Properties:
      DomainName: !Ref VPNDomainName
      DomainNameServers:
        - !Ref VPNDNSPrimary
        - !Ref VPNDNSSecondary
      NtpServers:
        - !Ref VPNNTPServerIp
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-DHCPOptionSet-01

  VPNDHCPOptionSetAttachment:
    Type: AWS::EC2::VPCDHCPOptionsAssociation
    Properties:
      VpcId: !Ref VPNVpc
      DhcpOptionsId: !Ref VPNDHCPOptionSet

  # Subnet
  VPNUntrustSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNUntrustSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Untrust-01

  VPNTrustSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNTrustSubnetCidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Trust-01

  VPNPrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPrivateSubnetACidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Private-01-a

  VPNPrivateSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPrivateSubnetCCidr
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Private-01-c

  VPNPrivateSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPrivateSubnetDCidr
      AvailabilityZone: ap-northeast-1d
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Private-01-d

  VPNPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPublicSubnetACidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Public-01-a

  VPNPublicSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPublicSubnetCCidr
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Public-01-c

  VPNPublicSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNPublicSubnetDCidr
      AvailabilityZone: ap-northeast-1d
      MapPublicIpOnLaunch: true
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subnet-Public-01-d

  VPNEndpointSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNEndpointSubnetACidr
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagValue
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subet-Endpoint-01-a

  VPNEndpointSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNEndpointSubnetCCidr
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagValue
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subet-Endpoint-01-c

  VPNEndpointSubnetD:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPNVpc
      CidrBlock: !Ref VPNEndpointSubnetDCidr
      AvailabilityZone: ap-northeast-1d
      MapPublicIpOnLaunch: false
      Tags:
        - Key: !Ref VPNTagValue
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-Subet-Endpoint-01-d

  # Route Table
  VPNUntrustRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Untrust-01

  VPNUntrustRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPNUntrustRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNInternetGateway

  VPNUntrustRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNUntrustRouteTable
      SubnetId: !Ref VPNUntrustSubnet

  VPNTrustRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Trust-01

  VPNTrustRouteTableAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNTrustRouteTable
      SubnetId: !Ref VPNTrustSubnet

  VPNPrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Private-01-a

  VPNPrivateRouteTableAAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPrivateRouteTableA
      SubnetId: !Ref VPNPrivateSubnetA

  VPNPrivateRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Private-01-c

  VPNPrivateRouteTableCAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPrivateRouteTableC
      SubnetId: !Ref VPNPrivateSubnetC

  VPNPrivateRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Private-01-d

  VPNPrivateRouteTableDAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPrivateRouteTableD
      SubnetId: !Ref VPNPrivateSubnetD

  VPNPublicRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Public-01-a

  VPNPublicRouteA:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNInternetGateway

  VPNPublicRouteTableAAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableA
      SubnetId: !Ref VPNPublicSubnetA

  VPNPublicRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Public-01-c

  VPNPublicCRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNInternetGateway

  VPNPublicRouteTableCAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableC
      SubnetId: !Ref VPNPublicSubnetC

  VPNPublicRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Public-01-d

  VPNPublicRouteD:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableD
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPNInternetGateway

  VPNPublicRouteTableDAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNPublicRouteTableD
      SubnetId: !Ref VPNPublicSubnetD

  VPNEndpointRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Endpoint-01-a

  VPNEndpointRouteTableAAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNEndpointRouteTableA
      SubnetId: !Ref VPNEndpointSubnetA

  VPNEndpointRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Endpoint-01-c

  VPNEndpointRouteTableCAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNEndpointRouteTableC
      SubnetId: !Ref VPNEndpointSubnetC

  VPNEndpointRouteTableD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPNVpc
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-RouteTable-Endpoint-01-d

  VPNEndpointRouteTableDAccociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref VPNEndpointRouteTableD
      SubnetId: !Ref VPNEndpointSubnetD

  # Endpoint
  VPNS3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
        "Version": "2012-10-17",
        "Statement":[{
          "Effect": "Allow",
          "Principal": "*",
          "Action": "*",
          "Resource": "*"
        }]
      }'
      RouteTableIds:
        - !Ref VPNPrivateRouteTableA
        - !Ref VPNPrivateRouteTableC
        - !Ref VPNPrivateRouteTableD
        - !Ref VPNPublicRouteTableA
        - !Ref VPNPublicRouteTableC
        - !Ref VPNPublicRouteTableD
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPNVpc

  #Prefix List
  VPNDNSPrefixList:
    Type: AWS::EC2::PrefixList
    Properties:
      AddressFamily: IPv4
      Entries:
        - Cidr: !Sub
            - "${IP}/32"
            - IP: !Ref VPNDNSPrimary
          Description: VPN Server IP 
        - Cidr: 8.8.8.8/32
          Description: Google Public Primary DNS IP 
        - Cidr: 8.8.4.4/32
          Description: Google Public Secondary DNS IP 
      MaxEntries: 10
      PrefixListName: VPN-DNS
      Tags:
        - Key: !Ref VPNTagKey
          Value: !Ref VPNTagValue
        - Key: Name
          Value: VPN-DNS

Outputs:
  VPNVpcId:
    Value: !Ref VPNVpc
    Export:
      Name: VPNVpcId

  VPNUntrustSubnetId:
    Value: !Ref VPNUntrustSubnet
    Export:
      Name: VPNUntrustSubnetId

  VPNTrustSubnetId:
    Value: !Ref VPNTrustSubnet
    Export:
      Name: VPNTrustSubnetId

  VPNPrivateSubnetAId:
    Value: !Ref VPNPrivateSubnetA
    Export:
      Name: VPNPrivateSubnetAId

  VPNPrivateSubnetCId:
    Value: !Ref VPNPrivateSubnetC
    Export:
      Name: VPNPrivateSubnetCId

  VPNPrivateSubnetDId:
    Value: !Ref VPNPrivateSubnetD
    Export:
      Name: VPNPrivateSubnetDId

  VPNPublicSubnetAId:
    Value: !Ref VPNPublicSubnetA
    Export:
      Name: VPNPublicSubnetAId

  VPNPublicSubnetCId:
    Value: !Ref VPNPublicSubnetC
    Export:
      Name: VPNPublicSubnetCId

  VPNPublicSubnetDId:
    Value: !Ref VPNPublicSubnetD
    Export:
      Name: VPNPublicSubnetDId

  VPNEndpointSubnetAId:
    Value: !Ref VPNEndpointSubnetA
    Export:
      Name: VPNEndpointSubnetAId

  VPNEndpointSubnetCId:
    Value: !Ref VPNEndpointSubnetC
    Export:
      Name: VPNEndpointSubnetCId

  VPNEndpointSubnetDId:
    Value: !Ref VPNEndpointSubnetD
    Export:
      Name: VPNEndpointSubnetDId

  VPNPrivateRouteTableAId:
    Value: !Ref VPNPrivateRouteTableA
    Export:
      Name: VPNPrivateRouteTableAId

  VPNPrivateRouteTableCId:
    Value: !Ref VPNPrivateRouteTableC
    Export:
      Name: VPNPrivateRouteTableCId

  VPNPrivateRouteTableDId:
    Value: !Ref VPNPrivateRouteTableD
    Export:
      Name: VPNPrivateRouteTableDId

  VPNPublicRouteTableAId:
    Value: !Ref VPNPublicRouteTableA
    Export:
      Name: VPNPublicRouteTableAId

  VPNPublicRouteTableCId:
    Value: !Ref VPNPublicRouteTableC
    Export:
      Name: VPNPublicRouteTableCId

  VPNPublicRouteTableDId:
    Value: !Ref VPNPublicRouteTableD
    Export:
      Name: VPNPublicRouteTableDId

  VPNDNSPrefixListId:
    Value: !GetAtt VPNDNSPrefixList.PrefixListId
